<resources>
    <string name="permission_not_allowed">Permission not allowed</string>
    <string name="app_name">CheckMate!</string>
    <string name="title_home">Home</string>
    <string name="title_settings">WiFi/Mobile</string>
    <string name="title_logs">Logs</string>
    <string name="delete">Delete</string>
    <string name="channel_name">CheckMate!</string>
    <string name="channel_description">CheckMate! app notification</string>
    <string name="CANCEL">CANCEL</string>
    <string name="cancel">Cancel</string>
    <string name="CLOSE">CLOSE</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="validate">Validate</string>
    <string name="Error">Error</string>
    <string name="Busy">Busy</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="NA">N/A</string>
    <string name="NO">NO</string>
    <string name="OK">OK</string>
    <string name="Okay">Okay</string>
    <string name="Initialize">Initialize</string>
    <string name="Success">Success</string>
    <string name="login_success">Login Success</string>
    <string name="registering_device">Registering device</string>
    <string name="failed_register">Failed to register your device.</string>
    <string name="failed_remove">Failed to remove share</string>
    <string name="connection_success">Connection Success!</string>
    <string name="connection_fail">Connection Failure!</string>
    <string name="failure">Failure</string>
    <string name="Warning">Warning</string>
    <string name="save">Save</string>
    <string name="YES">YES</string>
    <string name="delete_camera">Delete camera</string>
    <string name="confirm_delete">Are you sure want to delete this file?</string>
    <string name="confirm_delete_camera">Are you sure want to delete this camera?</string>
    <string name="confirm_delete_multi">Are you sure want to delete the selected file(s)?</string>
    <string name="configure_covert">Configure Covert Mode</string>
    <string name="without_configure_covert">Use without Covert Mode</string>
    <string name="confirm_convert">This mode hides the recording application behind a fully playable Chess game. To unlock the app, you press the numbers of your Pin code on the left side of the Chessboard. Would you like to use Covert Mode?</string>
    <string name="confirm_update">There is a new version available. Do you want to update now?</string>
    <string name="confirm_wifi">Are you sure want to continue on current wifi connection?</string>
    <string name="wifi_warning">%1$s has a wifi profile for %2$s it appears you are not connected. Would you like to switch network?</string>
    <string name="confirm_audio">Does your intended use of this application legally allow AUDIO RECORDING?</string>
    <string name="live">Live</string>
    <string name="playback">Playback</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="streaming">Streaming</string>
    <string name="enable_streaming">Enable streaming</string>
    <string name="enable_streaming_rec">Automatically record when streaming</string>
    <string name="settings">Settings</string>
    <string name="enable_gps">Enable GPS Sharing</string>
    <string name="sharing">Sharing</string>
    <string name="hide">Hide</string>
    <string-array name="update_frequency">
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <string name="licenses">Licenses</string>
    <string name="user_info">User Info</string>
    <string name="streaming_text">Streaming Coming Soon</string>
    <string name="share_new">Share with a new user</string>
    <string name="change_password">Change password</string>
    <string name="stream">Stream</string>
    <string name="rotate">Rotate</string>
    <string name="sel">SEL</string>
    <string name="rec">REC</string>
    <string name="snap">SNAP</string>
    <string name="half_rotate">Rotate effect</string>
    <string name="speed_test">Speed Test</string>
    <string name="flip">Flip effect</string>
    <string name="mirror">Mirror effect</string>
    <string name="normal">Normal</string>
    <string name="rotate_90">Rotate 90°</string>
    <string name="rotate_180">Rotate 180°</string>
    <string name="rotate_270">Rotate 270°</string>
    <string name="cameras">Cameras</string>
    <string name="ui">UI</string>
    <string name="beta">Beta</string>
    <string name="service_not_ready">"Foreground service not ready. Please try again."</string>
    <string name="projection_cancelled">"Media projection cancelled."</string>
    <string name="statistics">"&lt;b>%1$s&lt;/b>: %2$s, %3$s"</string>
    <string name="sound_key" translatable="false">"sound_settings"</string>
    <string name="sound_title">"Sound settings"</string>
    <string name="waiting">"&lt;i>Waiting for media projection&#8230;&lt;/i>"</string>
    <string name="sound_no_sound" translatable="false">"no_sound"</string>
    <string name="sound_mic" translatable="false">"mic"</string>
    <string name="sound_internal_audio" translatable="false">"internal_audio"</string>
    <string name="permission_denied">"You have denied some of the required permissions for this action. Please try again and allow them."</string>
    <string name="permission_permanently_denied">"You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them."</string>
    <string name="mic_denied">"You have denied microphone access. Please try again and allow it."</string>
    <string name="mic_permanently_denied">"You have forcefully denied microphone access. Please open settings, go to permissions and allow it."</string>
    <string name="storage_denied">"You have denied storage access. Please try again and allow it."</string>
    <string name="storage_permanently_denied">"You have forcefully denied storage access. Please open settings, go to permissions and allow it."</string>
    <string name="sound_entry_no_sound">"No sounds"</string>
    <string name="sound_entry_mic">"Microphone"</string>
    <string name="sound_entry_internal_audio">"Media sounds"</string>
    <string name="restart_required">Restart required</string>
    <string name="license_exceed_mgs">Activations licenses has been exceeded. Please contact support for assistance.</string>
    <string name="recording">Recording</string>
    <string name="stream_server">Streaming configuration</string>
    <string name="version">Version</string>
    <string name="current_version">Current Version</string>
    <string name="new_version">New Version</string>
    <string name="current_location">Current location</string>
    <string name="update">Update</string>
    <string name="update_now">Update Now</string>
    <string name="check_update">Check For Update</string>
    <string name="reactivate">Reactivate</string>
    <string name="exit_app">Exit application</string>
    <string name="warning_new">Warning</string>
    <string name="reactivate_message"> Pressing Ok button will de-activate your phone, make sure you have your serial number available to re-activate the CheckMate! application.</string>
    <string name="exit_message">Are you sure you would like to exit your application?</string>
    <string name="front_facing">Front Facing</string>
    <string name="rear_facing">Rear Facing</string>
    <string name="usb_camera">USB Camera</string>
    <string name="usb_camera_alert">There is not any usb camera connect. Please connect camera.</string>
    <string name="screen_cast">Screen Cast</string>
    <string name="audio_only_text">Audio Only</string>
    <string name="wifi_camera">Wifi Camera</string>
    <string name="convert_mode">Covert Mode</string>
    <string name="orientation_lock">Orientation Lock</string>
    <string name="choose_audio">Audio Selection</string>
    <string name="update_available">Update available!</string>
    <string name="secure_multitask">Secure Multi Task View</string>
    <string name="pin_number">Pin number (4 numbers)</string>
    <string name="pin_title">Pin number</string>
    <string name="pin_desc">Please enter your Pin (4 numbers).\n\nPlease choose a password using only the digits 1 through 8.</string>
    <string name="cloud_server">Cloud Server</string>
    <string name="beta_version">Beta Version</string>
    <string name="timestamp">Timestamp</string>
    <string name="vu_meter">VU meter</string>
    <string name="split_time">Split time (minutes)</string>
    <string name="split_title">Split time</string>
    <string name="split_desc">Please enter your split time (minutes)</string>
    <string name="hint_serial">Serial number</string>
    <string name="hint_wifi">Wifi Password</string>
    <string name="invalid_pin">Invalid pin number length</string>
    <string name="invalid_serial">Invalid serial number</string>
    <string name="invalid_machine_code">Invalid machine code</string>
    <string name="method_not_allowed">Method not allowed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="invalid_activation">Invalid activation code</string>
    <string name="invalid_value">Invalid value</string>
    <string name="failed_unregister">Failed to unregister</string>
    <string name="expired_activation">Your activation expired</string>
    <string name="expire_at">Expiration date</string>
    <string name="pin_applied">New pin is applied</string>
    <string name="record_audio">Record Audio</string>
    <string name="auto_record">Auto Record</string>
    <string name="volume_key">Volume key monitoring</string>
    <string name="enable_encryption">Enable encryption</string>
    <string name="file_encryption">File encryption</string>
    <string name="encrypted">Encrypted</string>
    <string name="otc">OTC</string>
    <string name="enter_key">At least 8 characters</string>
    <string name="overwrite_full">Overwrite when full (FIFO)</string>
    <string name="storage_location">Storage Location</string>
    <string name="location">Location</string>
    <string name="add_camera">Add Camera</string>
    <string name="add_rtsp_camera">Add RTSP Camera</string>
    <string name="add_external_camera">Add External Camera</string>
    <string name="add_wifi_camera">Add WIFI Camera</string>
    <string name="wifi_confirm">Are you already on this wifi connection?</string>
    <string name="new_camera">New Camera</string>
    <string name="edit_camera">Edit Camera</string>
    <string name="rtsp_url">RTSP URL</string>
    <string name="channel">Channel name</string>
    <string name="port">Port</string>
    <string name="uri">Uri</string>
    <string name="camera_name">Camera name</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="activation_code">Activation Code</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="no_activation">Please enter your activation code</string>
    <string name="enter_wifi">Please your wifi SSID</string>
    <string name="ssid">SSID</string>
    <string name="code_message">You can enter the activation code by typing it in the field below or click Scan QR Code.</string>
    <string name="password_desc">Please set your password</string>
    <string name="password_confirm">Please confirm your password</string>
    <string name="anonymous_login">Anonymous login</string>
    <string name="use_full">Use full address</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="stream_network">Stream network</string>
    <string name="push_network">Push network</string>
</resources>