<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="@dimen/image_extra_small"
                    android:layout_height="@dimen/image_extra_small"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/new_camera"
                    android:textSize="@dimen/textsize_large"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <EditText
                    android:id="@+id/edt_name"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/camera_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <EditText
                    android:id="@+id/edt_url"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/rtsp_url"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="end"
                android:paddingEnd="@dimen/margin_large">

                <CheckBox
                    android:id="@+id/chk_full_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_full" />

            </LinearLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <EditText
                    android:id="@+id/edt_port"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/port"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large">

                <EditText
                    android:id="@+id/edt_uri"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/uri"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large">

                <EditText
                    android:id="@+id/edt_username"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_normal">

                <EditText
                    android:id="@+id/edt_password"
                    style="@style/normalEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_background"
                    android:padding="16dp"
                    tools:ignore="TextFields" />

            </com.wrapp.floatlabelededittext.FloatLabeledEditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stream_network"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <com.checkmate.android.ui.view.MySpinner
                    android:id="@+id/spinner_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="horizontal"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/push_network"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <com.checkmate.android.ui.view.MySpinner
                    android:id="@+id/spinner_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:paddingEnd="@dimen/margin_large">

                <RadioButton
                    android:id="@+id/radio_udp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:checked="false"
                    android:text="@string/udp" />

                <RadioButton
                    android:id="@+id/radio_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:checked="true"
                    android:text="@string/tcp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="end"
                android:paddingEnd="@dimen/margin_large">

                <CheckBox
                    android:id="@+id/chk_anonymous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anonymous_login" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_secondary_background"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textsize_normal"
                    android:textColor="@color/white"
                    android:padding="12dp"
                    android:layout_marginEnd="8dp" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_primary_background"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="@dimen/textsize_normal"
                    android:textColor="@color/white"
                    android:padding="12dp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>