<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="@dimen/image_extra_small"
            android:layout_height="@dimen/image_extra_small"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/enter_wifi"
            android:textSize="@dimen/textsize_large"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_ssid"
        style="@style/normalEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:gravity="center"
        android:hint="@string/ssid"
        android:background="@drawable/edit_text_background"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_secondary_background"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary_background"
            android:text="@string/OK"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_normal"
            android:textColor="@color/white"
            android:padding="12dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>